# hacker-news-mcp-advanced

./: README.md  arxiv_explorer_mcp_reference.md  hacker_news_mcp_reference.md  main.py  pyproject.toml
src/hacker_news_mcp/: __init__.py  lifespan.py  prompts.py  resources.py  server.py  tools.py
