[project]
name = "hacker-news-mcp"
version = "0.1.0"
description = "A FastMCP server for interacting with Hacker News via the Algolia API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
hacker-news-mcp = "hacker_news_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hacker_news_mcp"]